--- a/app/src/main/res/layout/fragment_packages.xml
+++ b/app/src/main/res/layout/fragment_packages.xml
@@ -35,8 +35,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/package_item"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        tools:listitem="@layout/package_item" />
 </android.support.constraint.ConstraintLayout>
